tests/base/invalid/Function_CompileFail_2.whiley
void f(int x):
    out.println()"FIRST"

void f(int x):
    out.println()"SECOND"

void System::main([string] args):
    out.println()"NOUT"